--- a/css/style.scss
+++ b/css/style.scss
@@ -49,16 +49,34 @@ header {
 }
 
 .logo {
-  max-width: 180px;
+  max-width: 100px;
   width: 100%;
+  margin-top: -10px;
 }
 
 .form-check {
   margin-bottom: 15px;
 }
 
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+
 .product-wrapper {
-  margin-top: 25px;
+  margin-right: -20px;
+  max-height: 60vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.fade {
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  height: 80px;
+  width: 100%;
+  background: linear-gradient(transparent, #fff);
 }
 
 .product-qty {
@@ -72,6 +90,11 @@ hr {
 }
 
 .product {
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+
+.product-img-wrapper {
   height: 300px;
   width: 100%;
   border-radius: 4px;
@@ -214,7 +237,7 @@ footer {
   }
 
   .logo {
-    margin-top: 24px;
+    margin-top: 7px;
   }
 
   .secure-icon {
@@ -222,7 +245,11 @@ footer {
     margin-top: 15px;
   }
 
-  .product {
+  .product-wrapper {
+    height: 350px;
+  }
+
+  .product-img-wrapper {
     height: 200px;
   }
 
