--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,8 @@ header {
 }
 
 .product-wrapper {
-  margin-right: -20px;
+  margin-right: -15px;
+  padding-right: 15px;
   max-height: 60vh;
   overflow-y: scroll;
   overflow-x: hidden;
