--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,14 @@ header {
   }
 }
 
+.section-left {
+  display: none;
+}
+
+.justify-content-center {
+  justify-content: center !important;
+}
+
 .secure-icon {
   max-width: 40px;
   margin-top: -8px;
